*
* 1.1.1
*

- New NXSL functions: SetCustomAttribute
- New MIBs added: CISCO-CLUSTER-MIB, CISCO-HSRP-EXT-MIB, CISCO-HSRP-MIB,
  CISCO-MAC-NOTIFICATION-MIB, CISCO-STACKMAKER-MIB, CISCO-STP-EXTENSIONS-MIB,
  CISCO-SWITCH-CGMP-MIB, CISCO-VLAN-MEMBERSHIP-MIB, EMBEDDED-NGX-MIB


*
* 1.1.0
*

- Server jobs introduced
- Java API added
- Portable (Eclipse-based) management console introduced
- Server switched to UNICODE on Windows platform
- Windows x64 server version added
- MIB compiler improved
- Dropped agent support for Novell NetWare and Windows NT 4.0, 95, 98, Me


*
* 1.0.10
*

- Network discovery improved
- Added VRRP support
- Added new object tools type: server command
- New MIBs added: VRRP-MIB
- Fixed issues: #320, #321, #322


*
* 1.0.9
*

- Added LLDP support
- MIB compiler improved
- SNMP tools improved
- Added automatic conversion of non-printable strings in SNMP traps
- New MIBs added: APPLICATION-MIB, JVM-MANAGEMENT-MIB, APACHE2-MIB,
  SYSAPPL-MIB, RADIUS-AUTH-CLIENT-MIB, RADIUS-DYNAUTH-CLIENT-MIB,
  RADIUS-AUTH-SERVER-MIB, RADIUS-DYNAUTH-SERVER-MIB, RDBMS-MIB, 
  RADIUS-ACCT-CLIENT-MIB, MSSQLSERVER-MIB, RADIUS-ACCT-SERVER-MIB,
  BAY-STACK-MIB, S5-AGENT-MIB
- Fixed broken static agent build
- Fixed issues: #313, #318


*
* 1.0.8
*

- NXSL:
	- now possible to create scripts without explicit main()
	- named parameters added
	- New functions: GetNodeParents, PostEvent
- Fixed issues: #311, #312, #316, #317


*
* 1.0.7
*

- Implemented automatic alarm termination using regular expressions
- Added support for ODBC connection strings in ODBCQUERY subagent and
  ODBC database driver
- Added server configuration parameter ProcessAffinityMask
- Fixed issues: #309, #310


*
* 1.0.6
*

- Implemented adding existing nodes to cluster and removing nodes from cluster
- LogWatch subagent improved
- Fixed issues: #306, #307, #308


*
* 1.0.5
*

- New NXSL operators: += -= *= /= .= %= &= |= ^=
- New NXSL functions: index, rindex
- MIB compiler improved