@@ -1,5 +1,20 @@
 /**
- * 
+ * NetXMS - open source network management system
+ * Copyright (C) 2003-2011 Victor Kirhenshtein
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  */
 package org.netxms.client.datacollection;
 
@@ -7,9 +22,6 @@ import org.netxms.base.NXCPMessage;
 
 /**
  * Represents data collection item's threshold
- * 
- * @author Victor Kirhenshtein
- *
  */
 public class Threshold
 {
@@ -18,6 +30,7 @@ public class Threshold
 	public static final int F_DEVIATION = 2;
 	public static final int F_DIFF      = 3;
 	public static final int F_ERROR     = 4;
+	public static final int F_SUM       = 5;
 	
 	public static final int OP_LE       = 0;
 	public static final int OP_LE_EQ    = 1;
