@@ -2,6 +2,9 @@
 * 1.1.1
 *
 
+- Network device drivers introduced
+- Added drivers for Avaya ERS switches
+- New threshold function: SUM
 - New NXSL functions: SetCustomAttribute
 - New MIBs added: CISCO-CLUSTER-MIB, CISCO-HSRP-EXT-MIB, CISCO-HSRP-MIB,
   CISCO-MAC-NOTIFICATION-MIB, CISCO-STACKMAKER-MIB, CISCO-STP-EXTENSIONS-MIB,
